--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=http://localhost:8000
+
+VITE_PAYPAL_CLIENT_ID=ASm504eKHCfya9v1aqB5W3XNNtlNraKTSDT_jYRlVq2b5WzFXOh6cFrXAfMaYeabPzuTbjzWlgKyWMkb
