--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.9.2",
     "country-data": "^0.0.31",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
